move index.html into public

--- a/firebase.json
+++ b/firebase.json
@@ -7,14 +7,20 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "public": "y",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
   },
   "storage": {
-    "rules": "n"
+    "rules": "storage.rules"
   }
 }
